--- a/references.bib
+++ b/references.bib
@@ -1,58 +1,138 @@
 
-@article{Allee1932StuAni,
-  title = {Studies in Animal Aggregations: {{Mass}} Protection against Colloidal Silver among Goldfishes},
-  shorttitle = {Studies in Animal Aggregations},
-  author = {Allee, W. C. and Bowen, Edith S.},
-  year = {1932},
-  month = feb,
-  volume = {61},
-  pages = {185--207},
-  issn = {1097-010X},
-  doi = {10.1002/jez.1400610202},
-  file = {/home/tpoisot/Zotero/storage/GMRZNR3R/abstract\;jsessionid=4C253F36C2D481618DA19590CCE3D95C.html},
-  journal = {Journal of Experimental Zoology},
-  language = {en},
-  number = {2}
+@article{Bezanson2017JulFre,
+  title = {Julia: {{A Fresh Approach}} to {{Numerical Computing}}},
+  author = {Bezanson, J. and Edelman, A. and Karpinski, S. and Shah, V.},
+  year = {2017},
+  journal = {SIAM Review},
+  volume = {59},
+  number = {1},
+  pages = {65--98},
+  issn = {0036-1445},
+  doi = {10.1137/141000671}
 }
 
-@article{Camerano1880EquViv,
-  title = {Dell'equilibrio Dei Viventi Merce La Reciproca Distruzione},
-  author = {Camerano, Lorenzo},
-  year = {1880},
-  volume = {15},
-  pages = {393--414},
-  journal = {Atti Della R. Accad. Delle Sci. Torino}
+@article{Chamberlain2013TaxTax,
+  title = {Taxize: Taxonomic Search and Retrieval in {{R}}},
+  author = {Chamberlain, Scott A. and Sz{\"o}cs, Eduard},
+  year = {2013},
+  journal = {F1000Research},
+  volume = {2},
+  pages = {191},
+  issn = {2046-1402},
+  doi = {10.12688/f1000research.2-191.v2},
+  pmcid = {PMC3901538}
 }
 
-@book{Elton1927AniEco,
-  title = {Animal Ecology},
-  author = {Elton, Charles S},
-  year = {1927},
-  publisher = {{University of Chicago Press}}
+@article{Conti2021MatAlg,
+  title = {Match {{Algorithms}} for {{Scientific Names}} in {{FlorItaly}}, the {{Portal}} to the {{Flora}} of {{Italy}}},
+  author = {Conti, Matteo and Nimis, Pier Luigi and Martellos, Stefano},
+  year = {2021},
+  journal = {Plants},
+  volume = {10},
+  number = {5},
+  pages = {974},
+  publisher = {{Multidisciplinary Digital Publishing Institute}}
 }
 
-@article{Fahrenholz1913EctUnd,
-  title = {Ectoparasiten Und Abstammungslehre},
-  author = {Fahrenholz, H.},
-  year = {1913},
-  volume = {41},
-  pages = {371--374},
-  journal = {Zool. Anz.}
+@article{Dauncey2016ComMis,
+  title = {Common Mistakes When Using Plant Names and How to Avoid Them.},
+  author = {Dauncey, E. A. and Irving, J. and Allkin, R. and Robinson, N.},
+  year = {2016},
+  journal = {European Journal of Integrative Medicine},
+  volume = {8},
+  number = {5},
+  pages = {597--601}
 }
 
-@article{Nicholson1935BalAni,
-  title = {The {{Balance}} of {{Animal Populations}}.\textemdash{{Part I}}.},
-  author = {Nicholson, A. J. and Bailey, V. A.},
-  year = {1935},
-  month = sep,
-  volume = {105},
-  pages = {551--598},
-  issn = {1469-7998},
-  doi = {10.1111/j.1096-3642.1935.tb01680.x},
-  file = {/home/tpoisot/Zotero/storage/9TU79D3W/abstract.html},
-  journal = {Proceedings of the Zoological Society of London},
-  language = {en},
-  number = {3}
+@article{Federhen2012NcbTax,
+  title = {The {{NCBI}} Taxonomy Database},
+  author = {Federhen, Scott},
+  year = {2012},
+  journal = {Nucleic acids research},
+  volume = {40},
+  number = {D1},
+  pages = {D136--D143},
+  publisher = {{Oxford University Press}}
+}
+
+@article{Gibb2021DatPro,
+  title = {Data Proliferation, Reconciliation, and Synthesis in Viral Ecology},
+  author = {Gibb, Rory and Albery, Gregory F. and Becker, Daniel J. and Brierley, Liam and Connor, Ryan and Dallas, Tad A. and Eskew, Evan A. and Farrell, Maxwell J. and Rasmussen, Angela L. and Ryan, Sadie J. and Sweeny, Amy R. and Carlson, Colin J. and Poisot, Timothee},
+  year = {2021},
+  journal = {bioRxiv},
+  pages = {2021.01.14.426572},
+  doi = {10.1101/2021.01.14.426572},
+  language = {en}
+}
+
+@article{Lefkowitz2018VirTax,
+  title = {Virus Taxonomy: The Database of the {{International Committee}} on {{Taxonomy}} of {{Viruses}} ({{ICTV}})},
+  author = {Lefkowitz, Elliot J and Dempsey, Donald M and Hendrickson, Robert Curtis and Orton, Richard J and Siddell, Stuart G and Smith, Donald B},
+  year = {2018},
+  journal = {Nucleic Acids Research},
+  volume = {46},
+  number = {D1},
+  pages = {D708-D717},
+  issn = {0305-1048},
+  doi = {10.1093/nar/gkx932}
+}
+
+@article{Norman2020TaxHig,
+  title = {Taxadb: {{A}} High-Performance Local Taxonomic Database Interface},
+  author = {Norman, Kari E. A. and Chamberlain, Scott and Boettiger, Carl},
+  year = {2020},
+  journal = {Methods in Ecology and Evolution},
+  volume = {11},
+  number = {9},
+  pages = {1153--1159},
+  issn = {2041-210X},
+  doi = {10.1111/2041-210X.13440},
+  language = {en}
+}
+
+@article{Schoch2020NcbTax,
+  title = {{{NCBI Taxonomy}}: A Comprehensive Update on Curation, Resources and Tools},
+  author = {Schoch, Conrad L. and Ciufo, Stacy and Domrachev, Mikhail and Hotton, Carol L. and Kannan, Sivakumar and Khovanskaya, Rogneda and Leipe, Detlef and Mcveigh, Richard and O'Neill, Kathleen and Robbertse, Barbara},
+  year = {2020},
+  journal = {Database},
+  volume = {2020},
+  publisher = {{Oxford Academic}}
+}
+
+@article{Shimatani2001MeaSpe,
+  title = {On the {{Measurement}} of {{Species Diversity Incorporating Species Differences}}},
+  author = {Shimatani, Kenichiro},
+  year = {2001},
+  journal = {Oikos},
+  volume = {93},
+  number = {1},
+  pages = {135--147},
+  publisher = {{[Nordic Society Oikos, Wiley]}},
+  issn = {0030-1299}
+}
+
+@article{Wagner2016RevSof,
+  title = {A Review of Software Tools for Spell-Checking Taxon Names in Vegetation Databases},
+  author = {Wagner, Viktoria},
+  year = {2016},
+  journal = {Journal of Vegetation Science},
+  volume = {27},
+  number = {6},
+  pages = {1323--1327},
+  publisher = {{Wiley Online Library}}
+}
+
+@article{Walker2020ChaVir,
+  title = {Changes to Virus Taxonomy and the {{Statutes}} Ratified by the {{International Committee}} on {{Taxonomy}} of {{Viruses}} (2020)},
+  author = {Walker, Peter J. and Siddell, Stuart G. and Lefkowitz, Elliot J. and Mushegian, Arcady R. and Adriaenssens, Evelien M. and Dempsey, Donald M. and Dutilh, Bas E. and Harrach, Bal{\'a}zs and Harrison, Robert L. and Hendrickson, R. Curtis and Junglen, Sandra and Knowles, Nick J. and Kropinski, Andrew M. and Krupovic, Mart and Kuhn, Jens H. and Nibert, Max and Orton, Richard J. and Rubino, Luisa and Sabanadzovic, Sead and Simmonds, Peter and Smith, Donald B. and Varsani, Arvind and Zerbini, Francisco Murilo and Davison, Andrew J.},
+  year = {2020},
+  journal = {Archives of Virology},
+  volume = {165},
+  number = {11},
+  pages = {2737--2748},
+  issn = {1432-8798},
+  doi = {10.1007/s00705-020-04752-x},
+  language = {en}
 }
 
 
