--- a/references.bib
+++ b/references.bib
@@ -56,13 +56,14 @@
 }
 
 @article{Gibb2021DatPro,
-  title = {Data Proliferation, Reconciliation, and Synthesis in Viral Ecology},
-  author = {Gibb, Rory and Albery, Gregory F. and Becker, Daniel J. and Brierley, Liam and Connor, Ryan and Dallas, Tad A. and Eskew, Evan A. and Farrell, Maxwell J. and Rasmussen, Angela L. and Ryan, Sadie J. and Sweeny, Amy R. and Carlson, Colin J. and Poisot, Timothee},
-  year = {2021},
-  journal = {bioRxiv},
-  pages = {2021.01.14.426572},
-  doi = {10.1101/2021.01.14.426572},
-  language = {en}
+title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Viral Ecology}}},
+  author = {Gibb, Rory and Albery, Gregory F and Becker, Daniel J and Brierley, Liam and Connor, Ryan and Dallas, Tad A and Eskew, Evan A and Farrell, Maxwell J and Rasmussen, Angela L and Ryan, Sadie J and Sweeny, Amy and Carlson, Colin J and Poisot, Timothée},
+  date = {2021-08-25},
+  journaltitle = {BioScience},
+  shortjournal = {BioScience},
+  issn = {0006-3568},
+  doi = {10.1093/biosci/biab080},
+  issue = {biab080}
 }
 
 @article{Lefkowitz2018VirTax,
