--- a/references.bib
+++ b/references.bib
@@ -1,9 +1,21 @@
 
+@article{Barchard2011PreHum,
+  title = {Preventing Human Error: {{The}} Impact of Data Entry Methods on Data Accuracy and Statistical Results},
+  author = {Barchard, Kimberly and Pace, Larry},
+  date = {2011-09-01},
+  journaltitle = {Computers in Human Behavior},
+  shortjournal = {Computers in Human Behavior},
+  volume = {27},
+  pages = {1834--1839},
+  doi = {10.1016/j.chb.2011.04.004}
+}
+
 @article{Bezanson2017JulFre,
   title = {Julia: {{A Fresh Approach}} to {{Numerical Computing}}},
   author = {Bezanson, J. and Edelman, A. and Karpinski, S. and Shah, V.},
-  year = {2017},
-  journal = {SIAM Review},
+  date = {2017-01-01},
+  journaltitle = {SIAM Review},
+  shortjournal = {SIAM Rev.},
   volume = {59},
   number = {1},
   pages = {65--98},
@@ -13,10 +25,13 @@
 
 @article{Chamberlain2013TaxTax,
   title = {Taxize: Taxonomic Search and Retrieval in {{R}}},
-  author = {Chamberlain, Scott A. and Sz{\"o}cs, Eduard},
-  year = {2013},
-  journal = {F1000Research},
+  author = {Chamberlain, Scott A. and Szöcs, Eduard},
+  date = {2013-10-28},
+  journaltitle = {F1000Research},
+  shortjournal = {F1000Res},
   volume = {2},
+  eprint = {24555091},
+  eprinttype = {pmid},
   pages = {191},
   issn = {2046-1402},
   doi = {10.12688/f1000research.2-191.v2},
@@ -26,8 +41,8 @@
 @article{Conti2021MatAlg,
   title = {Match {{Algorithms}} for {{Scientific Names}} in {{FlorItaly}}, the {{Portal}} to the {{Flora}} of {{Italy}}},
   author = {Conti, Matteo and Nimis, Pier Luigi and Martellos, Stefano},
-  year = {2021},
-  journal = {Plants},
+  date = {2021},
+  journaltitle = {Plants},
   volume = {10},
   number = {5},
   pages = {974},
@@ -37,8 +52,8 @@
 @article{Dauncey2016ComMis,
   title = {Common Mistakes When Using Plant Names and How to Avoid Them.},
   author = {Dauncey, E. A. and Irving, J. and Allkin, R. and Robinson, N.},
-  year = {2016},
-  journal = {European Journal of Integrative Medicine},
+  date = {2016},
+  journaltitle = {European Journal of Integrative Medicine},
   volume = {8},
   number = {5},
   pages = {597--601}
@@ -47,8 +62,8 @@
 @article{Federhen2012NcbTax,
   title = {The {{NCBI}} Taxonomy Database},
   author = {Federhen, Scott},
-  year = {2012},
-  journal = {Nucleic acids research},
+  date = {2012},
+  journaltitle = {Nucleic acids research},
   volume = {40},
   number = {D1},
   pages = {D136--D143},
@@ -56,7 +71,7 @@
 }
 
 @article{Gibb2021DatPro,
-title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Viral Ecology}}},
+  title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Viral Ecology}}},
   author = {Gibb, Rory and Albery, Gregory F and Becker, Daniel J and Brierley, Liam and Connor, Ryan and Dallas, Tad A and Eskew, Evan A and Farrell, Maxwell J and Rasmussen, Angela L and Ryan, Sadie J and Sweeny, Amy and Carlson, Colin J and Poisot, Timothée},
   date = {2021-08-25},
   journaltitle = {BioScience},
@@ -69,8 +84,9 @@ title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Vira
 @article{Lefkowitz2018VirTax,
   title = {Virus Taxonomy: The Database of the {{International Committee}} on {{Taxonomy}} of {{Viruses}} ({{ICTV}})},
   author = {Lefkowitz, Elliot J and Dempsey, Donald M and Hendrickson, Robert Curtis and Orton, Richard J and Siddell, Stuart G and Smith, Donald B},
-  year = {2018},
-  journal = {Nucleic Acids Research},
+  date = {2018-01-04},
+  journaltitle = {Nucleic Acids Research},
+  shortjournal = {Nucleic Acids Research},
   volume = {46},
   number = {D1},
   pages = {D708-D717},
@@ -78,24 +94,47 @@ title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Vira
   doi = {10.1093/nar/gkx932}
 }
 
+@incollection{Meier2009BioRes,
+  title = {Biodiversity {{Research Based}} on {{Taxonomic Revisions}} - {{A Tale}} of {{Unrealized Opportunities}} -},
+  author = {Meier, Rudolf},
+  date = {2009-01-01},
+  pages = {323--345},
+  isbn = {978-90-04-14897-0}
+}
+
+@article{Melville2021RetApp,
+  title = {A Return-on-Investment Approach for Prioritization of Rigorous Taxonomic Research Needed to Inform Responses to the Biodiversity Crisis},
+  author = {Melville, Jane and Chapple, David G. and Keogh, J. Scott and Sumner, Joanna and Amey, Andrew and Bowles, Phil and Brennan, Ian G. and Couper, Patrick and Donnellan, Stephen C. and Doughty, Paul and Edwards, Danielle L. and Ellis, Ryan J. and Esquerré, Damien and Fenker, Jéssica and Gardner, Michael G. and Georges, Arthur and Haines, Margaret L. and Hoskin, Conrad J. and Hutchinson, Mark and Moritz, Craig and Nankivell, James and Oliver, Paul and Pavón-Vázquez, Carlos J. and Pepper, Mitzy and Rabosky, Daniel L. and Sanders, Kate and Shea, Glenn and Singhal, Sonal and Wilmer, Jessica Worthington and Tingley, Reid},
+  date = {2021-06-01},
+  journaltitle = {PLOS Biology},
+  shortjournal = {PLOS Biology},
+  volume = {19},
+  number = {6},
+  pages = {e3001210},
+  publisher = {{Public Library of Science}},
+  issn = {1545-7885},
+  doi = {10.1371/journal.pbio.3001210},
+  langid = {english}
+}
+
 @article{Norman2020TaxHig,
   title = {Taxadb: {{A}} High-Performance Local Taxonomic Database Interface},
   author = {Norman, Kari E. A. and Chamberlain, Scott and Boettiger, Carl},
-  year = {2020},
-  journal = {Methods in Ecology and Evolution},
+  date = {2020},
+  journaltitle = {Methods in Ecology and Evolution},
   volume = {11},
   number = {9},
   pages = {1153--1159},
   issn = {2041-210X},
   doi = {10.1111/2041-210X.13440},
-  language = {en}
+  langid = {english}
 }
 
 @article{Schoch2020NcbTax,
   title = {{{NCBI Taxonomy}}: A Comprehensive Update on Curation, Resources and Tools},
-  author = {Schoch, Conrad L. and Ciufo, Stacy and Domrachev, Mikhail and Hotton, Carol L. and Kannan, Sivakumar and Khovanskaya, Rogneda and Leipe, Detlef and Mcveigh, Richard and O'Neill, Kathleen and Robbertse, Barbara},
-  year = {2020},
-  journal = {Database},
+  author = {Schoch, Conrad L. and Ciufo, Stacy and Domrachev, Mikhail and Hotton, Carol L. and Kannan, Sivakumar and Khovanskaya, Rogneda and Leipe, Detlef and Mcveigh, Richard and O’Neill, Kathleen and Robbertse, Barbara},
+  date = {2020},
+  journaltitle = {Database},
   volume = {2020},
   publisher = {{Oxford Academic}}
 }
@@ -103,10 +142,12 @@ title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Vira
 @article{Shimatani2001MeaSpe,
   title = {On the {{Measurement}} of {{Species Diversity Incorporating Species Differences}}},
   author = {Shimatani, Kenichiro},
-  year = {2001},
-  journal = {Oikos},
+  date = {2001},
+  journaltitle = {Oikos},
   volume = {93},
   number = {1},
+  eprint = {3547217},
+  eprinttype = {jstor},
   pages = {135--147},
   publisher = {{[Nordic Society Oikos, Wiley]}},
   issn = {0030-1299}
@@ -115,8 +156,8 @@ title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Vira
 @article{Wagner2016RevSof,
   title = {A Review of Software Tools for Spell-Checking Taxon Names in Vegetation Databases},
   author = {Wagner, Viktoria},
-  year = {2016},
-  journal = {Journal of Vegetation Science},
+  date = {2016},
+  journaltitle = {Journal of Vegetation Science},
   volume = {27},
   number = {6},
   pages = {1323--1327},
@@ -125,15 +166,16 @@ title = {Data {{Proliferation}}, {{Reconciliation}}, and {{Synthesis}} in {{Vira
 
 @article{Walker2020ChaVir,
   title = {Changes to Virus Taxonomy and the {{Statutes}} Ratified by the {{International Committee}} on {{Taxonomy}} of {{Viruses}} (2020)},
-  author = {Walker, Peter J. and Siddell, Stuart G. and Lefkowitz, Elliot J. and Mushegian, Arcady R. and Adriaenssens, Evelien M. and Dempsey, Donald M. and Dutilh, Bas E. and Harrach, Bal{\'a}zs and Harrison, Robert L. and Hendrickson, R. Curtis and Junglen, Sandra and Knowles, Nick J. and Kropinski, Andrew M. and Krupovic, Mart and Kuhn, Jens H. and Nibert, Max and Orton, Richard J. and Rubino, Luisa and Sabanadzovic, Sead and Simmonds, Peter and Smith, Donald B. and Varsani, Arvind and Zerbini, Francisco Murilo and Davison, Andrew J.},
-  year = {2020},
-  journal = {Archives of Virology},
+  author = {Walker, Peter J. and Siddell, Stuart G. and Lefkowitz, Elliot J. and Mushegian, Arcady R. and Adriaenssens, Evelien M. and Dempsey, Donald M. and Dutilh, Bas E. and Harrach, Balázs and Harrison, Robert L. and Hendrickson, R. Curtis and Junglen, Sandra and Knowles, Nick J. and Kropinski, Andrew M. and Krupovic, Mart and Kuhn, Jens H. and Nibert, Max and Orton, Richard J. and Rubino, Luisa and Sabanadzovic, Sead and Simmonds, Peter and Smith, Donald B. and Varsani, Arvind and Zerbini, Francisco Murilo and Davison, Andrew J.},
+  date = {2020-11-01},
+  journaltitle = {Archives of Virology},
+  shortjournal = {Arch Virol},
   volume = {165},
   number = {11},
   pages = {2737--2748},
   issn = {1432-8798},
   doi = {10.1007/s00705-020-04752-x},
-  language = {en}
+  langid = {english}
 }
 
 
