--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,16 @@
   doi = {10.1137/141000671}
 }
 
+@article{Carlson2022GloVir,
+  title = {The {{Global Virome}} in {{One Network}} ({{VIRION}}): An {{Atlas}} of {{Vertebrate-Virus Associations}}},
+  author = {Carlson, Colin J. and Gibb, Rory J. and Albery, Gregory F. and Brierley, Liam and Connor, Ryan P. and Dallas, Tad A. and Eskew, Evan A. and Fagre, Anna C. and Farrell, Maxwell J. and Frank, Hannah K. and Muylaert, Renata L. and Poisot, Timothée and Rasmussen, Angela L. and Ryan, Sadie J. and Seifert, Stephanie N.},
+  date = {2022-03-01},
+  journaltitle = {mBio},
+  publisher = {{American Society for Microbiology}},
+  doi = {10.1128/mbio.02985-21},
+  langid = {english}
+}
+
 @article{Chamberlain2013TaxTax,
   title = {Taxize: Taxonomic Search and Retrieval in {{R}}},
   author = {Chamberlain, Scott A. and Szöcs, Eduard},
