--- a/references.bib
+++ b/references.bib
@@ -69,6 +69,16 @@
   pages = {597--601}
 }
 
+@incollection{Dikow2009BioRes,
+  title = {Biodiversity {{Research Based}} on {{Taxonomic Revisions}} - {{A Tale}} of {{Unrealized Opportunities}}},
+  booktitle = {Diptera {{Diversity}}: {{Status}}, {{Challenges}} and {{Tools}}},
+  author = {Dikow, Torsten and Meier, Rudolf and Vaidya, Gaurav G. and Londt, Jaosn G.H.},
+  date = {2009-01-01},
+  pages = {323--346},
+  publisher = {{Brill}},
+  isbn = {978-90-04-14897-0}
+}
+
 @article{Federhen2012NcbTax,
   title = {The {{NCBI}} Taxonomy Database},
   author = {Federhen, Scott},
@@ -102,14 +112,6 @@
   pages = {D708-D717},
   issn = {0305-1048},
   doi = {10.1093/nar/gkx932}
-}
-
-@incollection{Meier2009BioRes,
-  title = {Biodiversity {{Research Based}} on {{Taxonomic Revisions}} - {{A Tale}} of {{Unrealized Opportunities}} -},
-  author = {Meier, Rudolf},
-  date = {2009-01-01},
-  pages = {323--345},
-  isbn = {978-90-04-14897-0}
 }
 
 @article{Melville2021RetApp,
