--- a/references.bib
+++ b/references.bib
@@ -191,3 +191,58 @@
 }
 
 
+@software{TAXOPY,
+  author       = {Antônio Camargo and
+                  Michael Kuhn and
+                  Moritz E. Beber and
+                  Maxime Borry},
+  title        = {apcamargo/taxopy: v0.14.0},
+  month        = feb,
+  year         = 2025,
+  publisher    = {Zenodo},
+  version      = {v0.14.0},
+  doi          = {10.5281/zenodo.14799274},
+  url          = {https://doi.org/10.5281/zenodo.14799274},
+  swhid        = {swh:1:dir:f177879a052c9879462c9212dfef7e6ee03df88e
+                   ;origin=https://doi.org/10.5281/zenodo.6993580;vis
+                   it=swh:1:snp:6bc7116a48d9ddb693e8e5aa9f8176255fbcc
+                   cb9;anchor=swh:1:rel:d9337823a00e9c6c60c8372f3d692
+                   b095c366361;path=apcamargo-taxopy-8236fa3
+                  },
+}
+
+@software{RENTREZ,
+  author       = {Winter, David and
+                  Chamberlain, Scott and
+                  Guangchun, Han},
+  title        = {Rentrez 1.0.0},
+  month        = sep,
+  year         = 2015,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.32420},
+  url          = {https://doi.org/10.5281/zenodo.32420},
+}
+
+@ARTICLE{TAXONKIT,
+  title        = {{TaxonKit}: A practical and efficient {NCBI} taxonomy toolkit},
+  author       = {Shen, Wei and Ren, Hong},
+  journaltitle = {Yi chuan xue bao [Journal of genetics and genomics]},
+  publisher    = {Elsevier BV},
+  volume       = {48},
+  issue        = {9},
+  pages        = {844--850},
+  date         = {2021-09-20},
+  doi          = {10.1016/j.jgg.2021.03.006}
+}
+
+@ARTICLE{NCBITAXONOMIST,
+  title        = {Collecting and managing taxonomic data with {NCBI}-taxonomist},
+  author       = {Buchmann, Jan P and Holmes, Edward C},
+  journaltitle = {Bioinformatics (Oxford, England)},
+  publisher    = {Oxford University Press (OUP)},
+  volume       = {36},
+  issue        = {22-23},
+  pages        = {5548--5550},
+  date         = {2021-04-01},
+  doi          = {10.1093/bioinformatics/btaa1027}
+}
